Camino only - Bug 331576: Determine locale of UA string dynamically.  Also fixes 335026 and 336061.  Patch by mento <mark@moxienet.com>. r=hwaara sr=pink